# TomatoTent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_ota_image.py  p1.hex  partitions.csv  project.properties  sdkconfig  sdkconfig.defaults  sdkconfig.old  secure_boot_signing_key.pem  version.txt
GUI Project/: TT.sll  TT.spj  TT2.spj  TT_events.py  Themes.slt
Geany Project/: TomatoTent.geany  ZIGBEE RCP.geany
main/: CMakeLists.txt  Kconfig.projbuild  esp_zigbee_gateway.c  esp_zigbee_gateway.h  general.c  general.h  guiTask.c  guiTask.h  httpTask.c  httpTask.h  i80_controller_example_main.c  idf_component.yml  lvgl_demo_ui.c  main.c  otaTask.c  otaTask.h  sensorTask.c  sensorTask.h  timerTask.c  timerTask.h
main/helpers/: SplashScreen.c  SplashScreen.h
main/includes/scd4x/: scd4x.c  scd4x.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_image2.c  ui_comp_image2.h
main/ui/images/: esp_logo.c  tomato.c  tomatotent_text.c  ui_img_1126512945.c  ui_img_1130838376.c  ui_img_1142205948.c  ui_img_1180469587.c  ui_img_1319116584.c  ui_img_1324581693.c  ui_img_1484485426.c  ui_img_1668210446.c  ui_img_1668217869.c  ui_img_1668913270.c  ui_img_1669444289.c  ui_img_17176521.c  ui_img_1749885216.c  ui_img_1756057095.c  ui_img_1774250380.c  ui_img_182264864.c  ui_img_2060199463.c  ui_img_261459337.c  ui_img_290017612.c  ui_img_303216376.c  ui_img_320680866.c  ui_img_427627908.c  ui_img_432815713.c  ui_img_452284046.c  ui_img_60476769.c  ui_img_640654572.c  ui_img_713338696.c  ui_img_791711567.c  ui_img_953604683.c  ui_img_appointment_png.c  ui_img_bg2_png.c  ui_img_bud_png.c  ui_img_co2_png.c  ui_img_dew_png.c  ui_img_dimmer_png.c  ui_img_dry_png.c  ui_img_harvest_png.c  (+12 more)
main/ui/screens/: ui_ClimateControlScreen.c  ui_DayCounterScreen.c  ui_FanSettingsScreen.c  ui_GeneralSettingsScreen.c  ui_GraphScreen.c  ui_HomeScreen.c  ui_LEDBrightnessScreen.c  ui_LaunchScreen.c  ui_LightDurationScreen.c  ui_LightSettingsScreen.c  ui_Screen1.c  ui_SensorSettingsScreen.c  ui_SettingsScreen.c  ui_SoftwareUpdateScreen.c  ui_SplashScreen.c  ui_WifiSettingsScreen.c  ui_ZigbeeScreen.c
src/: Tomatotent.ino  api_server.cpp  assets.cpp  icons.h  screen.cpp  screen.h  screen_manager.cpp  screen_manager.h  tent.cpp  tent.h  tent_state.cpp  tent_state.h
src/libs/: Adafruit_ILI9341.cpp  Adafruit_ILI9341.h  DFRobot_SHT20.cpp  DFRobot_SHT20.h  PCF8575.cpp  PCF8575.h  SHT30.cpp  SHT30.h  T67XX.cpp  T67XX.h  lv_conf.h
src/screens/: cancel_confirm.cpp  climate.cpp  climate.h  fan.cpp  fan.h  firmware_update.cpp  firmware_update_confirm.cpp  firmware_update_confirm.h  home.cpp  home.h  light.cpp  wifi.cpp  wifi_clear_confirm.cpp  wifi_clear_confirm.h  wifi_splash.cpp  wifi_splash.h
