SET(SOURCES screens/ui_SplashScreen.c
    screens/ui_HomeScreen.c
    screens/ui_LightDurationScreen.c
    screens/ui_GraphScreen.c
    screens/ui_ClimateControlScreen.c
    screens/ui_WifiSettingsScreen.c
    screens/ui_GeneralSettingsScreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_plant_png.c
    images/ui_img_dry_png.c
    images/ui_img_tomato_png.c
    images/ui_img_tomatotent_text_png.c
    images/ui_img_791711567.c
    images/ui_img_1484485426.c
    images/ui_img_humidity_png.c
    images/ui_img_1774250380.c
    images/ui_img_60476769.c
    images/ui_img_wifi_png.c
    images/ui_img_640654572.c
    images/ui_img_co2_png.c
    images/ui_img_appointment_png.c
    images/ui_img_303216376.c
    images/ui_img_now_arrow_2_png.c
    images/ui_img_432815713.c
    images/ui_img_1756057095.c
    images/ui_img_harvest_png.c
    images/ui_img_1749885216.c
    images/ui_img_2060199463.c
    images/ui_img_bud_png.c
    images/ui_img_17176521.c
    images/ui_img_261459337.c
    images/ui_img_1142205948.c
    images/ui_img_953604683.c
    images/ui_img_1668913270.c
    images/ui_img_refresh_png.c
    images/ui_img_1668217869.c
    images/ui_img_713338696.c
    images/ui_img_1324581693.c
    images/ui_img_320680866.c
    images/ui_img_1180469587.c
    images/ui_img_290017612.c
    images/ui_img_1130838376.c
    images/ui_img_1319116584.c)

add_library(ui ${SOURCES})
